--- a/level_0_sprendymas.ipynb
+++ b/level_0_sprendymas.ipynb
@@ -56,6 +56,25 @@
     "        kortu_sarasas.append(f\"{korta} {zenklas}\")\n",
     "print(\"kortu sarasas: \", kortu_sarasas)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# ## 4. nugyventa >= 30 penktadienių\n",
+    "# Suskaičiuokite, kiek penktadienių, kurių mėnesio diena yra 30 ir daugiau, praėjo nuo jūsų gimtadienio"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from datetime import date\n"
+   ]
   }
  ],
  "metadata": {
