reverse logic bug in level 0, 1, 1

--- a/level_0.ipynb
+++ b/level_0.ipynb
@@ -13,7 +13,7 @@
    "metadata": {},
    "source": [
     "## 1. Matematika\n",
-    "1. parašykite funkciją, kuri lyginius skaičius dalintų vieną iš kito, o nelyginius sudaugintų, ir rezultatą grąžintų. Jeigu vienas yra lyginis, o kitas ne - atimtų didesnį iš mažesnio."
+    "1. parašykite funkciją, kuri lyginius skaičius dalintų vieną iš kito, o nelyginius sudaugintų, ir rezultatą grąžintų. Jeigu vienas yra lyginis, o kitas ne - atimtų mažesnį iš didesnio."
    ]
   },
   {
