fix level 0, 4 task title

--- a/level_0.ipynb
+++ b/level_0.ipynb
@@ -164,7 +164,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 4. nugyventa >= 30 penktadienių\n",
+    "## 4. nugyventa >= 30-dieninių penktadienių\n",
     "Suskaičiuokite, kiek penktadienių, kurių mėnesio diena yra 30 ir daugiau, praėjo nuo jūsų gimtadienio"
    ]
   },
