--- a/level_0_sprendymas.ipynb
+++ b/level_0_sprendymas.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -25,8 +25,8 @@
      "output_type": "stream",
      "text": [
       "Pradinis sarasas:  [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50, 51, 52]\n",
-      "random sarasas:  [41, 42, 28, 6, 16, 21, 25, 35, 26, 39, 4, 7, 46, 5, 31, 22, 11, 29, 48, 50, 14, 49, 17, 2, 40, 45, 10, 15, 27, 47, 37, 23, 44, 33, 34, 51, 1, 30, 20, 13, 9, 8, 38, 12, 18, 3, 32, 24, 36, 19, 52, 43]\n",
-      "kortu sarasas:  ['2 ♠', '3 ♠', '4 ♠', '5 ♠', '6 ♠', '7 ♠', '8 ♠', '9 ♠', '10 ♠', 'J ♠', 'Q ♠', 'K ♠', 'T ♠', '2 ♣', '3 ♣', '4 ♣', '5 ♣', '6 ♣', '7 ♣', '8 ♣', '9 ♣', '10 ♣', 'J ♣', 'Q ♣', 'K ♣', 'T ♣', '2 ♥', '3 ♥', '4 ♥', '5 ♥', '6 ♥', '7 ♥', '8 ♥', '9 ♥', '10 ♥', 'J ♥', 'Q ♥', 'K ♥', 'T ♥', '2 ♦', '3 ♦', '4 ♦', '5 ♦', '6 ♦', '7 ♦', '8 ♦', '9 ♦', '10 ♦', 'J ♦', 'Q ♦', 'K ♦', 'T ♦']\n"
+      "random sarasas:  [3, 23, 51, 32, 15, 24, 47, 30, 31, 13, 2, 7, 45, 42, 17, 29, 37, 10, 4, 50, 52, 6, 28, 16, 11, 34, 26, 33, 35, 38, 19, 20, 1, 40, 27, 39, 36, 48, 41, 22, 21, 49, 9, 8, 18, 25, 44, 5, 43, 14, 46, 12]\n",
+      "kortu sarasas:  ['2 ♠', '3 ♠', '4 ♠', '5 ♠', '6 ♠', '7 ♠', '8 ♠', '9 ♠', '10 ♠', 'J ♠', 'Q ♠', 'K ♠', 'A ♠', '2 ♣', '3 ♣', '4 ♣', '5 ♣', '6 ♣', '7 ♣', '8 ♣', '9 ♣', '10 ♣', 'J ♣', 'Q ♣', 'K ♣', 'A ♣', '2 ♥', '3 ♥', '4 ♥', '5 ♥', '6 ♥', '7 ♥', '8 ♥', '9 ♥', '10 ♥', 'J ♥', 'Q ♥', 'K ♥', 'A ♥', '2 ♦', '3 ♦', '4 ♦', '5 ♦', '6 ♦', '7 ♦', '8 ♦', '9 ♦', '10 ♦', 'J ♦', 'Q ♦', 'K ♦', 'A ♦']\n"
      ]
     }
    ],
@@ -52,7 +52,7 @@
     "\n",
     "kortu_sarasas = []\n",
     "for zenklas in [\"\\u2660\", \"\\u2663\", \"\\u2665\", \"\\u2666\"]:\n",
-    "    for korta in [*range(2, 11), \"J\", \"Q\", \"K\", \"T\"]:\n",
+    "    for korta in [*range(2, 11), \"J\", \"Q\", \"K\", \"A\"]:\n",
     "        kortu_sarasas.append(f\"{korta} {zenklas}\")\n",
     "print(\"kortu sarasas: \", kortu_sarasas)\n"
    ]
